# InLine

./: .gitignore  LICENSE  README.md  pyproject.toml
src/inline_cli/: __init__.py  __main__.py  app.py  config.py
src/inline_cli/providers/: anthropic_provider.py  base.py  gemini_provider.py  groq_provider.py  ollama_provider.py  openai_provider.py  registry.py
